# riva

./: .gitignore  Cargo.toml  readme.md
cli/: Cargo.toml
cli/src/: lib.rs
crates/riva_ws_server/: Cargo.toml
crates/riva_ws_server/bindings/: ClientMessage.ts  CommandType.ts  CreateRoomRequest.ts  CreateRoomResponse.ts  Event.ts  JoinRoomEvent.ts  JoinRoomPayload.ts  LeaveRoomEvent.ts  LeaveRoomPayload.ts  Message.ts  PresentationCommand.ts  PresentationRoomMessage.ts  RequestSlideChangePayload.ts  RoomJoinedPayload.ts  RoomLeftPayload.ts  ServerMessage.ts  SlideChangedPayload.ts
crates/riva_ws_server/src/: error.rs  lib.rs
crates/riva_ws_server/src/events/: mod.rs  presentation.rs  video.rs
crates/riva_ws_server/src/handlers/: room.rs
crates/riva_ws_server/src/room/: crdt.rs  mod.rs  presentation.rs  room_id.rs  storage.rs  transaction.rs  video.rs
riva-ts-client/: package-lock.json  package.json
riva-ts-client/src/: providers.tsx
riva-ts-client/src/app/: layout.tsx  page.tsx
riva-ts-client/src/app/[org_id]/slideshow/[slideshow_id]/: page.tsx
riva-ts-client/src/app/room/: create-room-form.tsx  page.tsx  rooms-table.tsx
riva-ts-client/src/hooks/: socket-io.ts  use-mutation.ts
riva-ts-client/src/types/: CommandMessage.ts  CommandType.ts  EventMessage.ts  EventType.ts  PresentationEvent.ts  RoomCommand.ts
ws-server/: Cargo.toml
ws-server/bindings/: CommandMessage.ts  EventMessage.ts  GetRoomsResponse.ts  Presentation.ts  PresentationCommand.ts  PresentationEvent.ts  Room.ts  RoomEvent.ts  RoomId.ts
ws-server/src/: error.rs  lib.rs
ws-server/src/database/: mod.rs
ws-server/src/database/hashmap/: mod.rs
ws-server/src/database/surrealdb/: error.rs  filter.rs  mod.rs  schema.surql  search.rs
ws-server/src/events/: mod.rs  presentation.rs
ws-server/src/file_storage/: mod.rs
ws-server/src/file_storage/s3/: mod.rs
ws-server/src/handlers/: room.rs
ws-server/src/message/: mod.rs
ws-server/src/message_broker/: mod.rs  socket_io.rs  ws.rs
ws-server/src/presentation/: mod.rs
ws-server/src/request_client/: mod.rs  reqwest.rs
ws-server/src/room/: client_id.rs  crdt.rs  message.rs  mod.rs  network_communicator.rs  presence.rs  presentation.rs  room_id.rs  room_manager.rs  storage.rs  transaction.rs
