[workspace]
members = ["cli", "crates/*"]
resolver = "2"
edition = "2024"

[workspace.package]
version = "0.1.0"
authors = ["Hector Crean <hectorcrean@gmail.com>"]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
color-eyre = "0.6.3"
thiserror = "2.0.12"
tracing = { version = "0.1.41", features = [] }
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
tokio = { version = "1.44.2", features = ["full"] }
url = "2.4.0"
clap = { version = "4.5.23", features = ["derive"] }
ts-rs = {version = "10.1.0", features = ["serde-json-impl", "chrono-impl"]}
axum = { version = "0.8.3", features = ["ws"] }
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
socketioxide = {version = "0.16.2", features = ["state", "tracing", "extensions", "msgpack"]}
rmpv = { version = "1.3.0", features = ["serde"] }  
strum = { version = "0.26.1", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
