[package]
name = "riva_ws_server"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
socketioxide = { workspace = true }
tower-http = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, version = "0.3", features = ["env-filter"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rmpv = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
ts-rs = { workspace = true }
chrono = { workspace = true }
serde-generate = { workspace = true }
serde-reflection = { workspace = true }
serde-name = { workspace = true }
http = { workspace = true }